--- a/roles/go-carbon/templates/storage-aggregation.conf.j2
+++ b/roles/go-carbon/templates/storage-aggregation.conf.j2
@@ -3,5 +3,5 @@
 
 [default]
 pattern = .*
-xFilesFactor = 0.5
-aggregationMethod = average
+xFilesFactor = {{ aggregation_xfilesfactor }}
+aggregationMethod = {{ aggregation_method }}
